--- a/CNN/CNN.ipynb
+++ b/CNN/CNN.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "id": "sCV30xyVhFbE"
    },
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -49,7 +49,7 @@
        "'2.9.1'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "id": "yFzqRgJRjWAR"
    },
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "id": "R4lt7-hDqsEN"
    },
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "id": "eM93Eceyssgu"
    },
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "id": "DTA__-gisqPT"
    },
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "id": "y6HkXCCC0pIl"
    },
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "id": "QdA0b2B-1qLw"
    },
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "id": "tcCOdrES2KND"
    },
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {
     "id": "He28wPqOUeFM"
    },
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "id": "Nv-Qp4cJU4_9"
    },
@@ -341,11 +341,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "id": "_rtM1QQLV09h"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/25\n",
+      "250/250 [==============================] - 46s 182ms/step - loss: 0.6788 - accuracy: 0.5754 - val_loss: 0.6433 - val_accuracy: 0.6435\n",
+      "Epoch 2/25\n",
+      "250/250 [==============================] - 37s 149ms/step - loss: 0.6186 - accuracy: 0.6629 - val_loss: 0.6224 - val_accuracy: 0.6905\n",
+      "Epoch 3/25\n",
+      "250/250 [==============================] - 37s 148ms/step - loss: 0.5878 - accuracy: 0.6930 - val_loss: 0.5629 - val_accuracy: 0.7230\n",
+      "Epoch 4/25\n",
+      "250/250 [==============================] - 37s 149ms/step - loss: 0.5393 - accuracy: 0.7291 - val_loss: 0.5309 - val_accuracy: 0.7450\n",
+      "Epoch 5/25\n",
+      "250/250 [==============================] - 38s 153ms/step - loss: 0.5152 - accuracy: 0.7418 - val_loss: 0.5730 - val_accuracy: 0.7115\n",
+      "Epoch 6/25\n",
+      "250/250 [==============================] - 40s 161ms/step - loss: 0.4960 - accuracy: 0.7544 - val_loss: 0.5230 - val_accuracy: 0.7505\n",
+      "Epoch 7/25\n",
+      "250/250 [==============================] - 330s 1s/step - loss: 0.4744 - accuracy: 0.7774 - val_loss: 0.5008 - val_accuracy: 0.7625\n",
+      "Epoch 8/25\n",
+      "250/250 [==============================] - 34s 138ms/step - loss: 0.4535 - accuracy: 0.7861 - val_loss: 0.4878 - val_accuracy: 0.7555\n",
+      "Epoch 9/25\n",
+      "250/250 [==============================] - 35s 138ms/step - loss: 0.4364 - accuracy: 0.7980 - val_loss: 0.4754 - val_accuracy: 0.7770\n",
+      "Epoch 10/25\n",
+      "250/250 [==============================] - 37s 147ms/step - loss: 0.4186 - accuracy: 0.8081 - val_loss: 0.4652 - val_accuracy: 0.7845\n",
+      "Epoch 11/25\n",
+      "250/250 [==============================] - 36s 143ms/step - loss: 0.3964 - accuracy: 0.8160 - val_loss: 0.4652 - val_accuracy: 0.7825\n",
+      "Epoch 12/25\n",
+      "250/250 [==============================] - 36s 146ms/step - loss: 0.3750 - accuracy: 0.8305 - val_loss: 0.4904 - val_accuracy: 0.7725\n",
+      "Epoch 13/25\n",
+      "250/250 [==============================] - 37s 146ms/step - loss: 0.3642 - accuracy: 0.8370 - val_loss: 0.5655 - val_accuracy: 0.7510\n",
+      "Epoch 14/25\n",
+      "250/250 [==============================] - 36s 143ms/step - loss: 0.3421 - accuracy: 0.8475 - val_loss: 0.4895 - val_accuracy: 0.7970\n",
+      "Epoch 15/25\n",
+      "250/250 [==============================] - 37s 148ms/step - loss: 0.3321 - accuracy: 0.8555 - val_loss: 0.5174 - val_accuracy: 0.7680\n",
+      "Epoch 16/25\n",
+      "250/250 [==============================] - 38s 151ms/step - loss: 0.3115 - accuracy: 0.8646 - val_loss: 0.4496 - val_accuracy: 0.8105\n",
+      "Epoch 17/25\n",
+      "250/250 [==============================] - 39s 155ms/step - loss: 0.3025 - accuracy: 0.8677 - val_loss: 0.5313 - val_accuracy: 0.7720\n",
+      "Epoch 18/25\n",
+      "250/250 [==============================] - 37s 149ms/step - loss: 0.2880 - accuracy: 0.8763 - val_loss: 0.4953 - val_accuracy: 0.7850\n",
+      "Epoch 19/25\n",
+      "250/250 [==============================] - 35s 141ms/step - loss: 0.2661 - accuracy: 0.8869 - val_loss: 0.4795 - val_accuracy: 0.8015\n",
+      "Epoch 20/25\n",
+      "250/250 [==============================] - 36s 142ms/step - loss: 0.2533 - accuracy: 0.8955 - val_loss: 0.4801 - val_accuracy: 0.8030\n",
+      "Epoch 21/25\n",
+      "250/250 [==============================] - 36s 145ms/step - loss: 0.2435 - accuracy: 0.9018 - val_loss: 0.5449 - val_accuracy: 0.7820\n",
+      "Epoch 22/25\n",
+      "250/250 [==============================] - 36s 142ms/step - loss: 0.2209 - accuracy: 0.9128 - val_loss: 0.5225 - val_accuracy: 0.7900\n",
+      "Epoch 23/25\n",
+      "250/250 [==============================] - 36s 144ms/step - loss: 0.2096 - accuracy: 0.9139 - val_loss: 0.5566 - val_accuracy: 0.7835\n",
+      "Epoch 24/25\n",
+      "250/250 [==============================] - 36s 143ms/step - loss: 0.2013 - accuracy: 0.9185 - val_loss: 0.5465 - val_accuracy: 0.8050\n",
+      "Epoch 25/25\n",
+      "250/250 [==============================] - 36s 143ms/step - loss: 0.1848 - accuracy: 0.9244 - val_loss: 0.6456 - val_accuracy: 0.7800\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x1f42305a340>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cnn.fit(x=training_set,validation_data=test_set,epochs=25)\n",
     "#fit method is used to train the cnn on training set with parameters\n",
@@ -363,17 +430,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "id": "Wd2qiRB3YFNk"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 16ms/step\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
+    "import tensorflow as tf\n",
     "from keras.preprocessing import image\n",
-    "test_image = image.load_img('dataset/single_prediction/cat_or_dog_1.jpg',target_size=(64,64))\n",
-    "#we need to convert our test image to numpy arrat\n",
-    "test_image=image.img_to_array(test_image)\n",
+    "test_image = tf.keras.utils.load_img('dataset/single_prediction/cat_or_dog_2.jpg',target_size=(64,64))\n",
+    "#we need to convert our test image to numpy array\n",
+    "test_image=tf.keras.utils.img_to_array(test_image)\n",
     "test_image=np.expand_dims(test_image,axis=0)\n",
     "result=cnn.predict(test_image)\n",
     "#encoding work for cat and dog\n",
@@ -386,11 +462,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "id": "8WL2H5pbbt3u"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dog\n"
+     ]
+    }
+   ],
    "source": [
     "print (prediction)"
    ]
