--- a/CNN/CNN.ipynb
+++ b/CNN/CNN.ipynb
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {
     "id": "Wd2qiRB3YFNk"
    },
@@ -439,7 +439,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 16ms/step\n"
+      "1/1 [==============================] - 0s 15ms/step\n"
      ]
     }
    ],
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {
     "id": "8WL2H5pbbt3u"
    },
@@ -471,7 +471,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dog\n"
+      "cat\n"
      ]
     }
    ],
